# pynamodb_single_table

./: .gitignore  .pre-commit-config.yaml  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  noxfile.py  pyproject.toml
.github/workflows/: constraints.txt  release.yml  tests.yml
docs/: conf.py  index.md  reference.md  requirements.txt  usage.md
src/pynamodb_single_table/: __init__.py  __main__.py  base.py
tests/: __init__.py  test_basics.py
